
Interface changes (aside from moving header files around)
======================================================================

Encoders that were in expert_forest are now stand-alone classes
in encoders.h

Moved lots of enums and made them enum class.


expert_variable class
    -> merged into variable class


Node storage methods
    Old calls
    ---------------------------------------------
    node_storage::moveNodeOffset(node, old, new)

    New Calls
    ---------------------------------------------
    node_storage::getParent()->moveNodeOffset(node, old, new)


Unpacked node

    unpacked_node::storage_style is removed in favor of node_storage_flags.

    OLD method calls                                NEW method calls
    ---------------------------------------------   ---------------------------------------------
    un->initFromNode(f, nh, howstored)              f->unpackNode(un, nh, howstored)
    unpacked_node::useUnpackedNode()                unpacked_node::New()
    unpacked_node::newFromNode(f, nh, howstored)    expert_forest::newUnpacked(nh, howstored)

    howstored is one of:
        FULL_ONLY       (old 'true')
        SPARSE_ONLY     (old 'false')
        FULL_OR_SPARSE


domain (PLANNED; NOT DONE YET. TBD)

    OLD method calls                                NEW method calls
    ---------------------------------------------   ---------------------------------------------
    domain::createForest(...)                       static within forest class

    global createDomain(...)                        static domain::create(...)


opname hierarcy
    CLASS                           NEW LOCATION
    ----------------------------    ----------------------------
    opname                          opname.h
    unary_opname                    opname.h
    binary_opname                   opname.h
    specialized_opname              opname.h

    numerical_opname                opname_numer.h

    constrained_opname              opname_satur.h