@@ -61,7 +61,6 @@
 #include <cassert>
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 
 using namespace MEDDLY;
 
