@@ -35,7 +35,6 @@
 
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include "../src/timer.h"
 #include "../src/loggers.h"
 
