@@ -39,7 +39,6 @@
 
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include "../src/loggers.h"
 
 // #define SET_VAR_NAMES
