@@ -40,7 +40,6 @@
 
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include "../src/loggers.h"
 #include "../src/timer.h"
 
