@@ -31,7 +31,6 @@
 #include <cassert>
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include "reorder.h"
 
 using namespace MEDDLY;
