@@ -27,7 +27,6 @@
 
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include "../src/timer.h"
 #include <cstdio>
 #include <stdarg.h>
