@@ -31,7 +31,6 @@
 #include <string.h>
 #include <cassert>
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 
 using namespace MEDDLY;
 
