@@ -32,7 +32,6 @@
 
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include <cassert>
 
 using namespace MEDDLY;
