@@ -30,7 +30,6 @@
 #include <cassert>
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include "../src/timer.h"
 
 using namespace MEDDLY;
