@@ -29,7 +29,6 @@
 #include <cassert>
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 #include "../src/timer.h"
 
 #define CACHE_SIZE 262144u
