@@ -34,7 +34,6 @@
 #include <vector>
 #define _MEDDLY_NOINST_
 #include "../src/meddly.h"
-#include "../src/meddly_expert.h"
 
 #define MAX(A, B) ((A > B)? A: B)
 #define MIN(A, B) ((A < B)? A: B)
